# www.proactiveprogrammers.com

./: .gitignore  .gitmessage  .gitmodules  README.md  _redirects  gulpfile.js  index.html  mkdocs.yml  netlify.toml  package.json  pyproject.toml  runtime.txt
.github/ISSUE_TEMPLATE/: config.yml  offer-web-site-feedback.yml  report-source-code-bug.yaml  report-source-code-bug.yml  report-web-site-bug.md  report-web-site-bug.yaml
.github/workflows/: main.yml
css/: proactive.css
decks/: pnpm-lock.yaml
decks/data-abstraction-slides/: package.json
decks/discrete-structures-slides/: package.json
decks/week-one/: package.json  slides.md
decks/week-two/: package.json  pnpm-lock.yaml  slides.md
docs/: index.md  tags.md
docs/Discrete-Structures/: ds1-learning-objectives.md
docs/data-abstraction/: introduction-data-abstraction.md  learning-objectives-data-abstraction.md  schedule-data-abstraction.md  syllabus-data-abstraction.md
docs/discrete-structures/: introduction-discrete-structures.md  learning-objectives-discrete-structures.md  schedule-discrete-structures.md  syllabus-discrete-structures.md
docs/proactive-community/: community-connections.md  introduction-proactive-community.md  professional-resources.md  technical-resources.md
docs/proactive-learning/: assessment-strategy.md  assignment-types.md  blooms-taxonomy.md  introduction-proactive-learning.md
docs/stylesheets/: extra.css
files/: average-file.ipynb
includes/: abbreviations.md
overrides/: main.html
proactive/: mkdocs.yml
scripts/: netlify-docs.sh
temp/: content-examples.md
(+209 files in other folders)
