[tool.poetry]
name = "proactive"
version = "0.1.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^7.2.3"
mkdocs-mermaid2-plugin = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
