[tool.poetry]
name = "proactive"
version = "0.1.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-mermaid2-plugin = "^0.5.2"
mkdocs-print-site-plugin = "^2.0.0"
mkdocs-minify-plugin = "^0.4.1"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-material = "^8.4.0"
jupyterlab = "^3.4.5"
jupyterlite = {version = "^0.1.0-beta.11", extras = ["all"]}
pandas = "^1.4.3"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupytext = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
